# M326-PA

./: README.md  pyproject.toml
Dokumente/: Server vs Client.odt  db.drawio
Dokumente/02-IPAs/IPA Dominik Zgraggen/: ToDo.xlsx
Dokumente/02-IPAs/IPA Max von Gellhorn/: Thumbs.db
Dokumente/02-IPAs/IPA Timo Gloor/: IPA-TimoGloor-Abgaben.7z
Dokumente/02-IPAs/IPA Wanda Lao/: IPA_local_Backup - Verknüpfung.lnk
M151Projekt/mysite/: db.sqlite3  schemacrawler command.txt
M151Projekt/mysite/main/: admin.py  forms.py  models.py  urls.py  views.py
M151Projekt/mysite/mysite/: settings.py  urls.py
kompetenzenapp/: run.bat
kompetenzenapp/kompetenzenapp/: urls.py
kompetenzenapp/main/: views.py
m326_pa/: db.sqlite3  manage.py  x_Adminpage.url  x_Logins.txt  x_Mainpage.url  x_makemigrations.bat  x_makemigrations.sh  x_migrate.bat  x_migrate.sh
m326_pa/kompetenzenapp/: asgi.py  settings.py  wsgi.py
m326_pa/m/: 0001_initial.py  0003_alter_lowlevelcompetence_updatedat_and_more.py  0005_competence_competencelevel_and_more.py
m326_pa/main/: admin.py  forms.py  models.py  urls.py  views.py
m326_pa/main/migrations/: 0001_initial.py  0002_alter_competence_competencelevel.py  0002_alter_competence_slug_alter_ressource_slug.py  0002_rename_midlevelkompetenz_lowlevelcompetence_parentcompetence.py  0003_remove_ressource_slug_remove_ressource_teacher.py  0003_ressource_competence_ressources.py  0004_achievedcompetence_competenceprofile_job_teacher_and_more.py  0004_alter_toplevelcompetence_updatedat.py  0004_delete_availablecompetence.py  0014_invitecode.py  (+15 more)
(+450 files in other folders)
